--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,3 +1,6 @@
+@import './tokens';
+@import './mixins';
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,9 +14,69 @@ body {
 }
 
 body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell',
-    'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+  @include font-base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: $color-bg;
+  color: $color-text-primary;
+}
+
+// ----------------------
+// 🔤 Typography Utilities
+// ----------------------
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @include font-weight-semibold;
+  @include text-primary;
+  line-height: 1.2;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
+h3 {
+  font-size: 1.25rem;
+}
+
+// ----------------------
+// 🔗 Links
+// ----------------------
+
+a {
+  color: $color-primary;
+  text-decoration: none;
+  @include transition-base;
+
+  &:hover {
+    color: $color-primary-hover;
+    text-decoration: underline;
+  }
+}
+
+// ----------------------
+// 📝 Form Elements Base
+// ----------------------
+
+input,
+textarea,
+select {
+  @include input-base;
+}
+
+// ----------------------
+// 🎯 Focus Styles
+// ----------------------
+
+*:focus-visible {
+  @include focus-ring;
 }
