--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,15 +37,27 @@ h6 {
 }
 
 h1 {
-  font-size: 2rem;
+  @include font-32;
 }
 
 h2 {
-  font-size: 1.5rem;
+  @include font-24;
 }
 
 h3 {
-  font-size: 1.25rem;
+  @include font-22;
+}
+
+h4 {
+  @include font-18;
+}
+
+h5 {
+  @include font-16;
+}
+
+h6 {
+  @include font-12;
 }
 
 // ----------------------
